Alignment issue fix in About us page (#59)
* updated the text in app js

* Add what we do section to About us page

* Change descriptions in JSON file

* Move About us page sub components to moduel folder

* Create About us hero section

* Add hero component to about us page

* Assign colors into variables

* Assing colors to vairables in the css file

* Add modified about us hero section

* Remove empty open close tags from AppRoutes

* Add modifications and assign colors to variables

* Create seperate component for display cards

* Convert file extention to .jsx

* Update the package-lock.json

* Remove tracking .vscode folder

* Change the WhatWeDoSection to .jsx format

* Fix alignment issue in About Us page

--- a/src/modules/AboutUsModules/AboutUsHeroSection/HeroSection.css
+++ b/src/modules/AboutUsModules/AboutUsHeroSection/HeroSection.css
@@ -2,18 +2,14 @@
   --light-background-color: #f6f5ff;
 }
 
-/* Styling for breakpoints */
-
-
-
 @media (min-width: 300px) {
   .hero-section-bg {
     position: absolute;
     overflow: auto;
     width: 100vw;
-    height: 400px;
-    left: 0px;
-    top: 0px;
+    height: 25rem;
+    left: 0rem;
+    top: 0rem;
     background: var(--light-background-color);
     clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 100%);
   }
@@ -23,23 +19,23 @@
   }
 
   .overlay {
-    height: 404px;
+    height: 25.25rem;
   }
 
   .header-title {
     font-weight: bolder;
-    font-size: 70px;
+    font-size: 4.375rem;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 1.25rem;
   }
 
   .header-content {
     font-weight: 400;
-    font-size: 22px;
+    font-size: 1.375rem;
     display: flex;
     justify-content: center;
-    padding: 15px;
+    padding: 0.938rem;
     text-align: justify;
   }
 }
@@ -49,11 +45,11 @@
     position: absolute;
     overflow: auto;
     width: 100vw;
-    height: 600px;
-    left: 0px;
-    top: 0px;
+    height: 25rem;
+    left: 0rem;
+    top: 0rem;
     background: var(--light-background-color);
-    clip-path: polygon(0 0, 100% 0%, 100% 50%, 0 70%);
+    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 100%);
   }
 
   .row {
@@ -61,25 +57,25 @@
   }
 
   .overlay {
-    height: 604px;
+    height: 25rem;
   }
 
   .header-title {
     font-weight: bolder;
-    font-size: 70px;
-    margin-left: 50px;
-    margin-top: 0px;
+    font-size: 4.375rem;
+    margin-left: 3.125rem;
+    margin-top: 0rem;
   }
 
   .header-content {
     font-weight: 400;
-    font-size: 22px;
-    margin-left: 50px;
+    font-size: 1.375rem;
+    margin-left: 3.125rem;
   }
 
   .header-img {
-    width: 350px;
-    margin-top: 20px;
+    width: 21.875rem;
+    margin-top: 1.25rem;
     display: none;
   }
 }
@@ -89,11 +85,11 @@
     position: absolute;
     overflow: auto;
     width: 100vw;
-    height: 600px;
-    left: 0px;
-    top: 0px;
+    height: 18.75rem;
+    left: 0rem;
+    top: 0rem;
     background: var(--light-background-color);
-    clip-path: polygon(0 0, 100% 0%, 100% 40%, 0 50%);
+    clip-path: polygon(0 0, 100% 0%, 100% 90%, 0 90%);
   }
 
   .row {
@@ -101,184 +97,178 @@
   }
 
   .overlay {
-    height: 304px;
+    height: 21.875rem;
   }
 
   .header-title {
     font-weight: bolder;
-    font-size: 70px;
+    font-size: 4.375rem;
     text-align: center;
-    margin-top: 0px;
+    margin-top: 0rem;
   }
 
   .header-content {
     font-weight: 400;
-    font-size: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    font-size: 1.25rem;
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
   }
 
   .header-img {
-    width: 350px;
-    margin-top: 20px;
+    width: 20.875rem;
+    margin-top: 1.25rem;
     display: none;
   }
 }
 
 @media (min-width: 768px) {
-  /* Device screen larger than 768px */
   .hero-section-bg {
     position: absolute;
     overflow: auto;
     width: 100vw;
-    height: 600px;
-    left: 0px;
-    top: 0px;
+    height: 31.25rem;
+    left: 0rem;
+    top: 0rem;
     background: var(--light-background-color);
-    clip-path: polygon(0 0, 100% 0%, 100% 42%, 0 55%);
+    clip-path: polygon(0 0, 100% 0%, 100% 70%, 0 90%);
   }
 
   .overlay {
-    height: 404px;
+    height: 31.25rem;
   }
 
   .header-title {
     font-weight: bolder;
-    font-size: 60px;
-    margin-left: 50px;
-    margin-top: 30px;
+    font-size: 3.75rem;
+    margin-left: 3.125rem;
+    margin-top: 1.875rem;
   }
 
   .header-content {
     font-weight: 400;
-    font-size: 18px;
-    margin-left: 50px;
+    font-size: 1.125rem;
+    margin-left: 3.125rem;
   }
 
   .header-img {
-    width: 320px;
-    margin-top: 30px;
+    width: 20rem;
+    margin-top: 1.875rem;
     display: block;
   }
 }
 
 @media (min-width: 992px) {
-  /* Device screen larger than 992px */
   .hero-section-bg {
     position: absolute;
     overflow: auto;
     width: 100vw;
-    height: 600px;
-    left: 0px;
-    top: 0px;
+    height: 31.25rem;
+    left: 0rem;
+    top: 0rem;
     background: var(--light-background-color);
-    clip-path: polygon(0 0, 100% 0%, 100% 42%, 0 55%);
+    clip-path: polygon(0 0, 100% 0%, 100% 72%, 0 90%);
   }
 
   .overlay {
-    height: 404px;
+    height: 31.25rem;
   }
 
   .header-title {
     font-weight: bolder;
-    font-size: 70px;
-    margin-left: 50px;
-    margin-top: 35px;
+    font-size: 4.375rem;
+    margin-top: 2.188rem;
   }
 
   .header-content {
     font-weight: 400;
-    font-size: 18px;
-    margin-left: 85px;
+    font-size: 0.875rem;
+    margin-left: 8.75rem;
   }
 
   .header-img {
-    width: 320px;
-    margin-left: 50px;
+    width: 20rem;
+    margin-left: 3.125rem;
     display: block;
   }
 }
 
 @media (min-width: 1200px) {
-  /* Device screen larger than 1200px */
   .hero-section-bg {
     position: absolute;
     overflow: auto;
     width: 100vw;
-    height: 500px;
-    left: 0px;
-    top: 0px;
+    height: 31.25rem;
+    left: 0rem;
+    top: 0rem;
     background: var(--light-background-color);
-    clip-path: polygon(0 0, 100% 0%, 100% 70%, 0 95%);
+    clip-path: polygon(0 0, 100% 0%, 100% 80%, 0 100%);
   }
 
   .overlay {
-    height: 500px;
+    height: 31.25rem;
   }
 
   .header-title {
     font-weight: bolder;
-    font-size: 92px;
-    margin-left: 0px;
-    margin-top: 35px;
+    font-size: 5.75rem;
+    margin-left: 0rem;
+    margin-top: 2.188rem;
   }
 
   .header-content {
     font-weight: 400;
-    font-size: 20px;
-    margin-left: 100px;
+    font-size: 1.25rem;
+    margin-left: 5rem;
     display: flex;
     justify-content: center;
   }
 
   .header-img {
-    width: 480px;
-    margin-left: 60px;
-    display: block;
+    width: 25rem;
   }
 }
 
 @media (min-width: 1400px) {
-  /* Device screen larger than 1400px */
   .hero-section-bg {
     position: absolute;
     overflow: auto;
     width: 100vw;
-    height: 580px;
-    left: 0px;
-    top: 0px;
+    height: 36.25rem;
+    left: 0rem;
+    top: 0rem;
     background: var(--light-background-color);
-    clip-path: polygon(0 0, 100% 0%, 100% 70%, 0 95%);
+    clip-path: polygon(0 0, 100% 0%, 100% 78%, 0 100%);
   }
 
   .overlay {
-    height: 580px;
+    height: 38.78rem;
   }
 
   .header-title {
     font-weight: bolder;
-    font-size: 100px;
-    margin-top: 100px;
-    display: flex;
-    justify-content: left;
-    margin-left: 250px;
+    font-size: 5rem;
+    margin-top: 5rem;
   }
 
   .header-content {
     font-weight: 400;
-    font-size: 28px;
-    margin-left: 235px;
-    display: flex;
-    justify-content: center;
+    font-size: 1.188rem;
+    margin-left: 10.625rem;
   }
 
   .header-img {
-    width: 600px;
-    margin-left: 60px;
+    width: 28.125rem;
     display: block;
   }
 }
 
+@media (min-width: 1700px) {
+  .header-content {
+    font-weight: 400;
+    font-size: 1.188rem;
+    margin-left: 17.5rem;
+  }
+}
 
 @media only screen 
 and (min-device-width: 320px) 
@@ -286,19 +276,18 @@ and (max-device-width: 768px)
 and (-webkit-min-device-pixel-ratio: 2)  {
 
   .hero-section-bg {
-    height: 350px;
+    height: 26rem;
   }
- 
 
   .header-title {
     font-weight: bolder;
-    font-size: 35px;
-    margin-left: 0px;
-    margin-top: 35px;
+    font-size: 3.75rem;
+    margin-left: 0rem;
+    margin-top: 0rem;
   }
 
   .header-content{
-    margin: auto;
     text-align: center;
+    font-size: 1.2rem;
   }
 }
